@@ -1,5 +1,10 @@
 0.19.2	UNRELEASED
 
+ BUG FIXES
+
+  * Fix deprecated Index.iterblobs method.
+    (Jelmer Vernooĳ)
+
 0.19.1	2018-04-05
 
  IMPROVEMENTS
